@@ -1,5 +1,6 @@
 Version 2.9.1dev:
 
+* Can install kick33180.A500 / kick33180.A500.RTB for WHDLoad.
 * Fixed save state dir when starting with UUID parameter.
 
 Version 2.9.0dev:
